# CorraSaurus

./: README.md  pyproject.toml
src/corrasaurus/: __init__.py  attrition.py  bootstrap.py  categories.py  clastdata.py  hydraulics.py  inversion.py  io.py  model.py
tests/: test_attrition.py  test_categories.py  test_clastdata.py  test_hydraulics.py  test_model.py
