[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "corrasaurus"
version = "0.1.0"
description = "Per-class Sternberg attrition-distance inversion from downstream clast fining (corrasion)."
authors = [{ name = "Andrew Wickert", email = "awickert@umn.edu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
